# indeed-cybersecurity-scraper

./: .gitignore  Dockerfile  README.MD  pyproject.toml  requirements.txt
scraper/: __init__.py  auth.py  fetch_data.py  schema.sql  scraper.py
scraper/templates/: base.html
scraper/templates/scraper/: index.html  request.html
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py
