[project]
name = "Scraper"
version = "1.0.0"
description = "Flask app to scrape job applications"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scraper"]